fix too large margin in 3d viewport buttons

--- a/frontend/stylesheets/trace_view/_tracing_view.less
+++ b/frontend/stylesheets/trace_view/_tracing_view.less
@@ -65,7 +65,6 @@
       width: 10px;
       height: 10px;
       border-radius: 50%;
-      margin-right: 5px;
     }
     &:nth-child(2) .colored-dot {
       background-color: var(--color-xy-viewport);
